fixing the static path

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -6,11 +6,11 @@
 {% block branding %}
 <h1 id="site-name">{% trans 'OpenBook administration' %}</h1>
 <hr/>
-<p align="right">Openbook is released to <br />PakShing Furniture, 4779 Steeles Ave.E., <br />Scarborough <br />Tel: (416)321-1882
+<p align="right">Openbook is released under GPL 3.0
 </p>
 <p>
 <hr />
-<p align="center"><a href="/">Home</a> | <a href="/invoice/invoice/">Invoice</a> | <a href="/invoice/report/">Report</a></p>
+<p align="center"><a href="/openbook">Home</a> | <a href="/openbook/invoice/invoice/">Invoice</a> | <a href="/openbook/invoice/report/">Report</a></p>
 </p>
 {% endblock %}
 {% block nav-global %}{% endblock %}
