--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -36,14 +36,14 @@
                 {% if password_change_url %}
                     <a href="{{ password_change_url }}">
                 {% else %}
-                    <a href="{{ root_path }}password_change/">
+                    <a href="admin/password_change/">
                 {% endif %}
                 {% trans 'Change password' %}</a> /
                 {% url admin:logout as logout_url %}
                 {% if logout_url %}
                     <a href="{{ logout_url }}">
                 {% else %}
-                    <a href="{{ root_path }}logout/">
+                    <a href="admin/logout/">
                 {% endif %}
                 {% trans 'Log out' %}</a>
             {% endblock %}
